# chaincrafter

./: 404.html  LICENSE  README.md  index.html
api/: index.html
async/: index.html
docs/: .gitignore  README.md  requirements.txt
docs/docs/: mkdocs.yml
docs/docs/docs/: api.md  async.md  examples.md  experiments.md  index.md  integrations.md
docs/docs/docs/integrations/: openai.md
examples/: index.html
experiments/: index.html
integrations/: index.html
integrations/llamacpp/: index.html
integrations/openai/: index.html
javascript/: package.json
python/: .gitignore  LOCAL_DEV.md  PUBLISH_BUILD.md  README.md  pyproject.toml  requirements.txt  setup.py
python/chaincrafter/: __init__.py  catalogs.py  chains.py  experiments.py  gui.py  loaders.py  loggers.py  models.py  prompts.py  splitters.py
python/examples/: README.md  catalog.yml  code_reviewer_async.py  hello_world.py  hello_world_experiment.py  hello_world_logger_sqlite3.py  interesting_facts.py  writing_suggestions_document_loader.py
python/examples/data/: article.html  article2.html
python/tests/: README.md  test_mock_chat.py
